Set aspect-ratio on YouTube/Wistia, responsiveness fixes (#36)
* Set aspect-ratio for YouTube/Wistia to allow max-width enforcement

* Update tests for new aspect-ratio on YouTube/Wistia

* Set bullets to be inside on mobile

* Fix dev overflow on mobile

* Add padding to details to avoid text overlapping caret

* Add to changelog

--- a/styles/_details.scss
+++ b/styles/_details.scss
@@ -30,7 +30,7 @@ details {
     &[open] {
         summary {
             border-bottom: 1px solid $gray8;
-            padding: 0 0 1em;
+            padding: 0 1em 1em 0;
             margin: 0 0 1em;
 
             &::after {
@@ -43,6 +43,7 @@ details {
     summary {
         cursor: pointer;
         list-style: none;
+        padding: 0 1em 0 0;
         position: relative;
 
         &::-webkit-details-marker,
